--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -339,9 +339,16 @@ which will be especially important for debugging the hands-on activities.
 
 \section{Instructors}
 
-\textbf{Nathan Schneider} is \nss{\ldots general bio}. 
+\textbf{Nathan Schneider} is an annotation schemer and computational modeler for natural language. 
 He has been involved in the design of the AMR formalism since 2012, 
-beginning with a summer internship at ISI. \nss{experience leading blitzes}
+when he interned with Kevin Knight at ISI. 
+His dissertation introduced a coarse-grained representation for lexical semantics that facilitates rapid annotation 
+and is practical for statistical NLP \citep{schneider-thesis}. 
+He has also worked on semantic parsing for the FrameNet representation \citep{das-14} 
+and other forms of annotation and processing for social media text \citep{gimpel-11,owoputi-13,schneider-13,kong-14,mohit-12}.
+For most of these projects, he led the efforts to formalize the annotation scheme, 
+developed annotation guidelines and workflows, and supervised annotators.
+He will lead the first half of the tutorial.
 
 \textbf{Jeffrey Flanigan} \nss{\ldots}
 
