--- a/amr.bib
+++ b/amr.bib
@@ -62,3 +62,77 @@
 	year = {2012},
 	pages = {1359--1376}
 }
+
+
+@phdthesis{schneider-thesis,
+	address = {Pittsburgh, Pennsylvania, {USA}},
+	type = {{Ph.D.} dissertation},
+	title = {Lexical {S}emantic {A}nalysis in {N}atural {L}anguage {T}ext},
+	url = {http://www.cs.cmu.edu/~nschneid/thesis/thesis-print.pdf},
+	school = {Carnegie Mellon University},
+	author = {Schneider, Nathan},
+	month = sep,
+	year = {2014}
+}
+
+@article{das-14,
+	title = {Frame-semantic parsing},
+	volume = {40},
+	number = {1},
+	journal = {Computational Linguistics},
+	author = {Das, Dipanjan and Chen, Desai and Martins, Andr\'{e} F. T. and Schneider, Nathan and Smith, Noah A.},
+	month = mar,
+	year = {2014},
+	pages = {9--56}
+}
+
+
+@inproceedings{kong-14,
+	address = {Doha, Qatar},
+	title = {A dependency parser for tweets},
+	booktitle = {Proc. of {EMNLP}},
+	author = {Kong, Lingpeng and Schneider, Nathan and Swayamdipta, Swabha and Bhatia, Archna and Dyer, Chris and Smith, Noah A.},
+	month = oct,
+	year = {2014},
+	pages = {1001--1012}
+},
+
+@inproceedings{schneider-13,
+	address = {Sofia, Bulgaria},
+	title = {A framework for (under)specifying dependency syntax without overloading annotators},
+	booktitle = {Proc. of the 7th Linguistic Annotation Workshop and Interoperability with Discourse},
+	author = {Schneider, Nathan and {O'Connor}, Brendan and Saphra, Naomi and Bamman, David and Faruqui, Manaal and Smith, Noah A. and Dyer, Chris and Baldridge, Jason},
+	month = aug,
+	year = {2013},
+	pages = {51--60}
+},
+
+@inproceedings{owoputi-13,
+	address = {Atlanta, Georgia, {USA}},
+	title = {Improved part-of-speech tagging for online conversational text with word clusters},
+	booktitle = {Proc. of {NAACL-HLT}},
+	author = {Owoputi, Olutobi and {O'Connor}, Brendan and Dyer, Chris and Gimpel, Kevin and Schneider, Nathan and Smith, Noah A.},
+	month = jun,
+	year = {2013},
+	pages = {380--390}
+},
+
+@inproceedings{gimpel-11,
+	address = {Portland, Oregon, {USA}},
+	title = {Part-of-speech tagging for {T}witter: annotation, features, and experiments},
+	booktitle = {Proc. of {ACL-HLT}},
+	author = {Gimpel, Kevin and Schneider, Nathan and {O'Connor}, Brendan and Das, Dipanjan and Mills, Daniel and Eisenstein, Jacob and Heilman, Michael and Yogatama, Dani and Flanigan, Jeffrey and Smith, Noah A.},
+	month = jun,
+	year = {2011},
+	pages = {42--47}
+},
+
+@inproceedings{mohit-12,
+	address = {Avignon, France},
+	title = {Recall-oriented learning of named entities in {A}rabic {W}ikipedia},
+	booktitle = {Proc. of {EACL}},
+	author = {Mohit, Behrang and Schneider, Nathan and Bhowmick, Rishav and Oflazer, Kemal and Smith, Noah A.},
+	month = apr,
+	year = {2012},
+	pages = {162--173}
+}
