--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -343,14 +343,14 @@ which will be especially important for debugging the hands-on activities.
 He has been involved in the design of the AMR formalism since 2012, 
 when he interned with Kevin Knight at ISI. 
 His dissertation introduced a coarse-grained representation for lexical semantics that facilitates rapid annotation 
-and is practical for statistical NLP \citep{schneider-thesis}. 
+and is practical for broad-coverage statistical NLP \citep{schneider-thesis}. 
 He has also worked on semantic parsing for the FrameNet representation \citep{das-14} 
 and other forms of annotation and processing for social media text \citep{gimpel-11,owoputi-13,schneider-13,kong-14,mohit-12}.
-For most of these projects, he led the efforts to formalize the annotation scheme, 
-developed annotation guidelines and workflows, and supervised annotators.
+For most of these projects, he led the design of the annotation scheme, guidelines, and workflows, 
+and the training and supervision of annotators.
 He will lead the first half of the tutorial.
 
-\textbf{Jeffrey Flanigan} \nss{\ldots}
+\textbf{Jeffrey Flanigan} \nss{\ldots MT, built the FIRST EVAR realistic AMR parser, attended summer workshop}
 
 \bibliographystyle{aclnat}
 % you bib file should really go here
