--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -339,7 +339,7 @@ which will be especially important for debugging the hands-on activities.
 
 \section{Instructors}
 
-\textbf{Nathan Schneider} is an annotation schemer and computational modeler for natural language. 
+\textbf{Nathan Schneider} (\url{http://nathan.cl}) is an annotation schemer and computational modeler for natural language. 
 He has been involved in the design of the AMR formalism since 2012, 
 when he interned with Kevin Knight at ISI. 
 His dissertation introduced a coarse-grained representation for lexical semantics that facilitates rapid annotation 
@@ -348,9 +348,9 @@ He has also worked on semantic parsing for the FrameNet representation \citep{da
 and other forms of annotation and processing for social media text \citep{gimpel-11,owoputi-13,schneider-13,kong-14,mohit-12}.
 For most of these projects, he led the design of the annotation scheme, guidelines, and workflows, 
 and the training and supervision of annotators.
-He will lead the first half of the tutorial.
+He will lead the first half of the tutorial.\\[-5pt]
 
-\textbf{Jeffrey Flanigan} \nss{\ldots MT, built the FIRST EVAR realistic AMR parser, attended summer workshop}
+\noindent \textbf{Jeffrey Flanigan} (\url{http://www.cs.cmu.edu/~jmflanig/}) \nss{\ldots MT, built the FIRST EVAR realistic AMR parser, attended summer workshop}
 
 \bibliographystyle{aclnat}
 % you bib file should really go here
