--- a/amr.bib
+++ b/amr.bib
@@ -136,3 +136,36 @@
 	year = {2012},
 	pages = {162--173}
 }
+
+
+@inproceedings{flanigan-14,
+	address = {Baltimore, Maryland, {USA}},
+	title = {A discriminative graph-based parser for the {A}bstract {M}eaning {R}epresentation},
+	booktitle = {Proc. of {ACL}},
+	author = {Flanigan, Jeffrey and Thomson, Sam and Carbonell, Jaime and Dyer, Chris and Smith, Noah A.},
+	month = jun,
+	year = {2014},
+	pages = {1426--1436}
+},
+
+@inproceedings{thomson-14,
+	address = {Dublin, Ireland},
+	title = {{CMU}: arc-factored, discriminative semantic dependency parsing},
+	booktitle = {Proc. of {SemEval}},
+	author = {Thomson, Sam and {O'Connor}, Brendan and Flanigan, Jeffrey and Bamman, David and Dodge, Jesse and Swayamdipta, Swabha and Schneider, Nathan and Dyer, Chris and Smith, Noah A.},
+	month = aug,
+	year = {2014},
+	pages = {176--180}
+}
+
+
+@inproceedings{prabhakaran-12,
+	address = {Jeju, Republic of Korea},
+	title = {Statistical modality tagging from rule-based annotations and crowdsourcing},
+	booktitle = {Proc. of the Workshop on {Extra-Propositional} Aspects of Meaning in Computational Linguistics},
+	author = {Prabhakaran, Vinodkumar and Bloodgood, Michael and Diab, Mona and Dorr, Bonnie and Levin, Lori and Piatko, Christine D. and Rambow, Owen and Van Durme, Benjamin},
+	month = jul,
+	year = {2012},
+	pages = {57--64}
+}
+
