--- a/amr.bib
+++ b/amr.bib
@@ -169,3 +169,35 @@
 	pages = {57--64}
 }
 
+@techreport{amr-ldc,
+	address = {Philadelphia, Pennsylvania, {USA}},
+	title = {Abstract {M}eaning {R}epresentation ({AMR}) {A}nnotation {R}elease 1.0},
+	url = {https://catalog.ldc.upenn.edu/LDC2014T12},
+	number = {{LDC2014T12}},
+	institution = {Linguistic Data Consortium},
+	author = {Knight, Kevin and Baranescu, Laura and Bonial, Claire and Georgescu, Madalina and Griffitt, Kira and Hermjakob, Ulf and Marcu, Daniel and Palmer, Martha and Schneider, Nathan},
+	month = jun,
+	year = {2014}
+}
+
+
+@inproceedings{propbank,
+	address = {Las Palmas, Canary Islands},
+	title = {From {TreeBank} to {PropBank}},
+	booktitle = {Proc. of {LREC}},
+	author = {Kingsbury, Paul and Palmer, Martha},
+	month = may,
+	year = {2002},
+	pages = {1989--1993}
+},
+
+@inproceedings{bonial-14,
+	address = {Reykjav\'{i}k, Iceland},
+	title = {{PropBank}: semantics of new predicate types},
+	booktitle = {Proc. of {LREC}},
+	author = {Bonial, Claire and Bonn, Julia and Conger, Kathryn and Hwang, Jena D. and Palmer, Martha},
+	editor = {Calzolari, Nicoletta and Choukri, Khalid and Declerck, Thierry and Loftsson, Hrafn and Maegaard, Bente and Mariani, Joseph and Moreno, Asuncion and Odijk, Jan and Piperidis, Stelios},
+	month = may,
+	year = {2014},
+	pages = {3013--3019}
+}
