--- a/amr.bib
+++ b/amr.bib
@@ -201,3 +201,25 @@
 	year = {2014},
 	pages = {3013--3019}
 }
+
+
+@inproceedings{pourdamghani-14,
+	address = {Doha, Qatar},
+	title = {Aligning {E}nglish strings with {A}bstract {M}eaning {R}epresentation graphs},
+	booktitle = {Proc. of {EMNLP}},
+	author = {Pourdamghani, Nima and Gao, Yang and Hermjakob, Ulf and Knight, Kevin},
+	month = oct,
+	year = {2014},
+	pages = {425--429}
+}
+
+
+@inproceedings{cai-13,
+	address = {Sofia, Bulgaria},
+	title = {Smatch: an {E}valuation {M}etric for {S}emantic {F}eature {S}tructures},
+	booktitle = {Proc. of {ACL}},
+	author = {Cai, Shu and Knight, Kevin},
+	month = aug,
+	year = {2013},
+	pages = {748--752}
+}
