--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -297,7 +297,7 @@ is rapidly emerging as an important practical form of structured sentence semant
 Conceived just a few years ago, AMR has enjoyed momentum thanks to 
 the ongoing development of large-scale annotated corpora 
 (20k sentences annotated; an additional 45k expected by the end of 2015).
-It has stimulated research in automata-theoretic formalisms \citep{jones-12,chiang-13}
+It has stimulated research in grammar formalisms for graphs \citep{jones-12,chiang-13,braune-14}
 as well as structured prediction algorithms \citep{flanigan-14}.
 Following on the heels of the Fred Jelinek Memorial Workshop in Prague (summer, 2014), 
 which explored the cross-lingual linguistic and computational implications of AMR, 
@@ -411,6 +411,8 @@ A tentative outline for the session is as follows
 \end{tabular}
 %\end{table}
 \end{center}
+
+\nss{guided practice}
 
 \begin{figure}\centering
 \includegraphics[width=\columnwidth]{editor_zoomed.png}
