--- a/amr.bib
+++ b/amr.bib
@@ -43,15 +43,26 @@
 }
 
 
+
 @inproceedings{chiang-13,
 	address = {Sofia, Bulgaria},
-	title = {Parsing {G}raphs with {H}yperedge {R}eplacement {G}rammars},
+	title = {Parsing graphs with hyperedge replacement grammars},
 	booktitle = {Proc. of {ACL}},
 	author = {Chiang, David and Andreas, Jacob and Bauer, Daniel and Hermann, Karl Moritz and Jones, Bevan and Knight, Kevin},
 	month = aug,
 	year = {2013},
 	pages = {924--932}
 },
+
+@inproceedings{braune-14,
+	address = {Reykjav\'{i}k, Iceland},
+	title = {Mapping between {E}nglish strings and reentrant semantic graphs},
+	booktitle = {Proc. of {LREC}},
+	author = {Braune, Fabienne and Bauer, Daniel and Knight, Kevin},
+	editor = {Calzolari, Nicoletta and Choukri, Khalid and Declerck, Thierry and Loftsson, Hrafn and Maegaard, Bente and Mariani, Joseph and Moreno, Asuncion and Odijk, Jan and Piperidis, Stelios},
+	month = may,
+	year = {2014}
+}
 
 @inproceedings{jones-12,
 	address = {Mumbai, India},
