more details in outline

--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -392,6 +392,12 @@ A tentative outline for the session is as follows
 5 & \multicolumn{2}{l|}{Introduction}\\
   & \textbf{I.} & \textbf{The AMR formalism for English} \citep{amr,amr-guidelines}\\
 30 & Ia. & How meaning is structured\\
+  & \multicolumn{2}{l|}{\parbox{20em}{\begin{itemize}
+	\item Basics: Entities, events, and relations
+	\item Constructions beyond NP V NP PP: focus, modality/negation, control, 
+relative clauses, coordination, subordination, etc.
+	\item Advanced topics: ignored words, hallucinated concepts, reification, cyclicity %\vspace*{-\baselineskip}
+\end{itemize}}} \\
 10 & Ib. & What is not represented, and how AMR differs from alternatives\\
  5 & Ic. & Annotation tools and data resources\\
 20 & Id. & Guided annotation practice with the AMR Editor (\fref{fig:editor})\\
@@ -402,6 +408,11 @@ A tentative outline for the session is as follows
   & \textbf{II.} & \textbf{Algorithms and applications}\\
 10 & IIb. & 2 algorithms for alignment: JAMR's \citep{flanigan-14}, ISI's \citep{pourdamghani-14} \\
 40 & IIc. & Parsing as structured prediction: JAMR \citep{flanigan-14} \\
+  & \multicolumn{2}{l|}{\parbox{20em}{\begin{itemize}
+	\item Concept identification
+	\item Relation identification
+	\item Training
+\end{itemize}}} \\
  5 & IId. & Evaluation: \texttt{smatch} \citep{cai-13} \\
  5 & IIe. & Cross-lingual issues: Is AMR an Interlingua? \citep{xue-14} \\
  5 & IIf. & Motivation for graph grammar formalisms \citep{braune-14} \\
