--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -397,7 +397,7 @@ A tentative outline for the session is as follows
 relative clauses, coordination, subordination, etc.
 	\item Advanced topics: ignored words, hallucinated concepts, reification, cyclicity %\vspace*{-\baselineskip}
 \end{itemize}}} \\
-10 & Ib. & What is not represented, and how AMR differs from alternatives\\
+10 & Ib. & What is not represented, and how AMR differs from alternative meaning representations\\
  5 & Ic. & Annotation tools and data resources\\
 20 & Id. & Guided annotation practice with the AMR Editor (\fref{fig:editor})\\
  5 & Ie. & Discussion\\
