--- a/amr-proposal.tex
+++ b/amr-proposal.tex
@@ -321,8 +321,8 @@ Following that is an outline of the tutorial structure and logistics.
 \includegraphics[width=.87\textwidth]{ginsburg.pdf}
 \caption{A sentence from a political blog (left) and its AMR graph (right). 
 Between them are fragments of the graph that would ideally be aligned to fragments of the sentence. 
-Near-paraphrases like \textit{Ginsburg said that we will be obligated to provide contraception to other people.}\ 
-would receive the same AMR.}
+Near-paraphrases like \textit{Ginsburg said that we will be obligated\jmf{sounds more natural: ``are obligated''} to provide contraception to other people.}\ 
+would receive the same AMR.\jmf{This figure seems confusing to me.  I'm not sure what the colors mean.}}
 \label{fig:ginsburg}
 \end{figure*}
 
